healthpartners.com (archived on 2009-10-22)
{
  "alexa_rank": 151062,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 5117,
  "classifier_probability": 0.86,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.27,
  "homepage_snapshot_redirected_domain": "healthpartners.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090929080354id_/http://www.healthpartners.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090929080354id_/http%3A//healthpartners.com",
  "interval": "2009_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "healthpartners.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091022090819id_/http%3A//www.healthpartners.com/portal/208.html",
  "policy_title": "HealthPartners.com - Our Privacy Policy",
  "policy_url": "healthpartners.com/portal/208.html",
  "sha1": "b320c3fcc8724fcce474434a0c4d6d2e583015bf",
  "simhash": 12544825018529047912,
  "simhash_updated": true,
  "site_hostname": "healthpartners.com",
  "site_url": "http://healthpartners.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20091022090819",
  "word_count": 830,
  "year": 2009
}

--- a/h/he/hea/healthpartners.com.html
+++ b/h/he/hea/healthpartners.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the healthpartners.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618140141id_/http%3A//www.healthpartners.com/portal/208.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the healthpartners.com privacy policy that was archived on 2009-10-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091022090819id_/http%3A//www.healthpartners.com/portal/208.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>HealthPartners.com - Our Privacy Policy</title>
@@ -109,7 +109,7 @@
 
 
 
-<!-- Vignette V6 Fri Apr 17 02:00:26 2009 -->
+<!-- Vignette V6 Thu Oct 08 14:43:43 2009 -->
 
 
 
@@ -175,9 +175,7 @@
 
 If you are a member of a HealthPartners health plan, please consult the <a href="/files/22750.pdf" target="_blank">Health Plan Privacy Notice</a><img src="/images/types/pdf.gif"> for a description of our privacy practices and the rights of our health plan members. If you are a self-insured member (that is, if your employer is self-insured), please check with your employer for more information about your employer's health plans privacy practices.
 <br><br>
-If you are a patient at a HealthPartners clinic, please consult the <a href="/files/22751.pdf" target="_blank">Medical and Dental Clinics Privacy Notice</a><img src="/images/types/pdf.gif"> for a description of our privacy practices and the rights of our clinic patients.
-<br><br>
-If you are a patient at Regions Hospital, please consult the <a href="/files/22752.pdf" target="_blank">Hospital Privacy Notice</a><img src="/images/types/pdf.gif"> for a description of our privacy practices and the rights of our hospital patients.
+If you are a patient at a HealthPartners clinic or Regions Hospital, please consult the <a href="/files/22751.pdf" target="_blank">Medical and Dental Clinics and Hospital Privacy Notice</a><img src="/images/types/pdf.gif"> for a description of our privacy practices and the rights of our clinic and hospital patients.
 <br><br> 
 
 
@@ -323,16 +321,9 @@ GP:2279548v1
 <div class="title">Privacy Notices</div><br>
 <content>
 
-
-<ul start="1" type="disc">
-
-	<li><a href="/files/22750.pdf" onmouseout="self.status=&quot;&quot;;return true;" onmouseover="self.status=&quot;Health Plan Privacy Notice&quot;;return true;" target="_blank">Health Plan Privacy Notice</a><img align="absmiddle" src="/images/types/pdf.gif"></li>
-
-	<li><a href="/files/22751.pdf" onmouseout="self.status=&quot;&quot;;return true;" onmouseover="self.status=&quot;Medical and Dental Clinics Privacy Notice&quot;;return true;" target="_blank">Medical and Dental Clinics Privacy Notice</a><img align="absmiddle" src="/images/types/pdf.gif"></li>
-
-	<li><a href="/files/22752.pdf" onmouseout="self.status=&quot;&quot;;return true;" onmouseover="self.status=&quot;Hospital Privacy Notice&quot;;return true;" target="_blank">Hospital Privacy Notice</a><img align="absmiddle" src="/images/types/pdf.gif"></li>
-
-</ul>
+<a href="/files/22750.pdf">Health Plan Privacy Notice</a><img src="/images/types/pdf.gif">
+<br><br>
+<a href="/files/22751.pdf">Medical and Dental Clinics and Hospital Privacy Notice</a><img src="/images/types/pdf.gif">
 </content>
 &nbsp;
 				</div>
@@ -380,6 +371,7 @@ GP:2279548v1
 			<table border="0" cellpadding="0" cellspacing="0"> 
 				<tbody><tr>
 					<td nowrap="nowrap"><a href="/portal/1.html"> About Us </a></td>
+					<td nowrap="nowrap"><a href="/portal/9.html"> Newsroom </a></td>
 					<td><a href="/portal/406.html"> Careers </a> </td>
 					<td><a href="/portal/208.html"> Privacy </a> </td>
 					<td nowrap="nowrap"><a href="/portal/209.html"> Terms </a> </td> 
@@ -398,11 +390,18 @@ GP:2279548v1
 
 <div class="ecb" id="ecb34092"><content>
 
+<div style="margin-left:15px;">
+<!-- AddThis Button BEGIN -->
+<script type="text/javascript">var addthis_pub="healthpartners";</script>
+<a href="https://www.addthis.com/bookmark.php?v=20" onclick="return addthis_sendto()" onmouseout="addthis_close()" onmouseover="return addthis_open(this, '', '[URL]')"><img alt="Bookmark and Share" height="16" src="https://secure.addthis.com/static/btn/lg-share-en.gif" style="border:0" width="125"> </a><script src="https://secure.addthis.com/js/250/addthis_widget.js" type="text/javascript"><!--DONT DELETE THIS COMMENT--></script><!-- AddThis Button END -->
+</div>
+
 <!-- SiteCatalyst Footer Code version: H.17. -->
 <script language="JavaScript" type="text/javascript"><!--
 var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 <!-- End SiteCatalyst Footer Code version: H.17. -->
-<br><br>
+
+
 </content></div>
 </div>
 </td></tr></tbody></table></div></center>
