--- a/c/cp/cps/cpsc.gov.html
+++ b/c/cp/cps/cpsc.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cpsc.gov privacy policy that was archived on 2009-05-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090514195744id_/http%3A//www.cpsc.gov/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cpsc.gov privacy policy that was archived on 2009-10-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091023024304id_/http%3A//www.cpsc.gov/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>Privacy and Security Notice</title></head><body vlink="FF4500" link="0000FF"><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2">
 
@@ -30,7 +30,7 @@
 <h3><a id="CPSC Copyright Information" name="copyright">Copyright</a></h3>
 
 <blockquote>
-<p>Providing the public with vital safety information over the Internet and the World Wide Web is an essential part of the U.S. Consumer Product Safety Commission's (CPSC) effort to carry out its mission. Information presented on these pages is public information.  You may freely distribute, copy, or link to any of the information presented.  If you do so, please use appropriate byline/photo/image credit.</p>
+<p>Providing the public with vital safety information over the Internet and the World Wide Web is an essential part of the U.S. Consumer Product Safety Commission's (CPSC) effort to carry out its mission. Information presented on these pages is public information.  You may freely distribute, copy, or link to any of the information presented.  If you do so, please use appropriate byline/photo/image credit. However, the information may not be used in a way that states or implies CPSC endorsement.</p>
 </blockquote>
 
 <hr>
