--- a/c/co/con/contentwatch.com.html
+++ b/c/co/con/contentwatch.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the contentwatch.com privacy policy that was archived on 2009-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090620003202id_/http%3A//www.contentwatch.com/support/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the contentwatch.com privacy policy that was archived on 2009-10-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091024054240id_/http%3A//www.contentwatch.com/support/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -14,19 +14,21 @@
         <link href="/rss/blog" rel="alternate" type="application/rss+xml" title="Blog (RSS 2.0)">
         <meta name="ROBOTS" content="ALL">
         
-		<link rel="stylesheet" type="text/css" href="//static1.contentwatch.com/css/3.0/cw_base3.16.css">
+		<link rel="stylesheet" type="text/css" href="//static1.contentwatch.com/css/v/cw_base3.20.css">                
+<!--[if lt IE 7]>
+			<link rel="stylesheet" href="//static1.contentwatch.com/css/v/ie6.css" type="text/css" media="screen" />
+		<![endif]-->
 		
 <meta name="MMSSmartTagsPreventParsing" content="true">
-<meta name="Copyright" content="(c) 2001-2008 Copyright content: ContentWatch, Inc. Copyright design: ContentWatch, Inc.">
+<meta name="Copyright" content="(c) 2001-2009 Copyright content: ContentWatch, Inc. Copyright design: ContentWatch, Inc.">
 <meta name="y_key" content="2f51c89f4e81cd3b">
 <meta name="verify-v1" content="BphgjVlDGQzDjbfK/AnMvNU2wrn4NC7eFoHRvTgamYE=">
 <script type="text/javascript"></script>
-<link rel="stylesheet" type="text/css" media="print" href="//static1.contentwatch.com/css/print3.16.css">
-    <script type="text/javascript" src="https://web.archive.org/web/20091021101808/http://www.contentwatch.com/mint/?record&amp;key=4e384e6775797863313430615232313635323157&amp;referer=&amp;resource=https%3A//web.archive.org/web/20090620003202id_/http%253A//www.contentwatch.com/support/privacy_policy&amp;resource_title=ContentWatch%20Privacy%20Policy&amp;resource_title_encoded=0&amp;resolution=800x600&amp;flash_version=0&amp;window_width=1366&amp;window_height=768&amp;eatscookies=no&amp;cw_pid=undefined&amp;cw_mid=undefined&amp;osw_name=Linux&amp;osw_version=&amp;1580393313843&amp;serve_js"></script></head>
+<link rel="stylesheet" type="text/css" media="print" href="//static1.contentwatch.com/css/print3.20.css">
+	<script type="text/javascript" src="https://web.archive.org/web/20091021101808/http://www.contentwatch.com/mint/?record&amp;key=4e384e6775797863313430615232313635323157&amp;referer=&amp;resource=https%3A//web.archive.org/web/20091024054240id_/http%253A//www.contentwatch.com/support/privacy_policy&amp;resource_title=ContentWatch%20Privacy%20Policy&amp;resource_title_encoded=0&amp;resolution=800x600&amp;flash_version=0&amp;window_width=1366&amp;window_height=768&amp;eatscookies=no&amp;cw_pid=undefined&amp;cw_mid=undefined&amp;osw_name=Linux&amp;osw_version=&amp;1580393313810&amp;serve_js"></script></head>
     <body class="yui-skin-sam">
 		<div id="doc2" class="yui-t7">
-			<div id="hd"><a href="/"><img src="/images/3.0/cw/hd_logo.jpg" alt="ContentProtect Internet Management"></a><div class="yui-b"><div class="yui-b formblock"><form action="/search" method="post"><input type="text" class="text" name="keywords"><button type="submit"><span>Search</span></button></form><p id="cw_top">Call 1-866-765-7233 Today!</p></div>
-		<div class="yui-b menublock">
+			<div id="hd">
                 <div id="cwmenu" class="yuimenubar">
      <div class="bd">
          <ul class="first-of-type">
@@ -58,10 +60,11 @@
              </li>
             <li class="yuimenubaritem"><a class="yuimenubaritemlabel" href="/resources">Resources</a></li>
             <li class="yuimenubaritem"><a class="yuimenubaritemlabel" href="/blog">Blog</a></li>
-            <li class="yuimenubaritem"><a class="yuimenubaritemlabel" href="/support">Support</a>
+            <li class="yuimenubaritem"><a class="yuimenubaritemlabel" href="/support" id="activemenubar">Support</a>
                 <div id="menu_support" class="yuimenu">
                     <div class="bd">
                         <ul>
+                            <li class="yuimenuitem"><a href="/forum">User Forum</a></li>
                             <li class="yuimenuitem"><a href="/kb">Knowledge Base</a></li>
                             <li class="yuimenuitem"><a href="/support/request">Request Help</a></li>
                             <li class="yuimenuitem"><a href="/support/accuracy">Accuracy</a></li>
@@ -110,13 +113,22 @@
                             <li class="yuimenubaritem"><a class="yuimenubaritemlabel" href="/login">My Account</a></li>
                         </ul>
     </div>
-</div></div></div>
+</div>
+
+
+				<div class="yui-g">
+					<div class="yui-u first">
+                                            <a href="/"><img class="logo" src="/images/v/cw/logo.png" alt="ContentWatch, Inc."></a>
+					</div>
+					<div class="yui-u">
+<form action="/search" method="post" id="sitesearch"><p><button class="formSubmit" type="submit">SEARCH</button><input type="text" class="text" name="keywords"></p></form>
+					</div>
+				</div>
 			</div>
 			<div id="bd">
-            	<div id="yui-main">
-            	   <div class="yui-b">
-                       <div id="mast"><div class="nomast"></div></div>
-                       <div id="content">
+				<div id="yui-main">
+					<div class="yui-b">
+
                             <h1>Privacy Policy</h1>
 
 <p>Your privacy is important to ContentWatch Inc. To better protect your privacy, we have provided this statement which explains our online information practices, and the choices regarding the way your personal information is collected and used. We hope this statement will increase your confidence in our Web site and enhance your experience on the Internet with ContentWatch Inc.</p>
@@ -153,25 +165,35 @@
 2369 West Orton Circle<br>
 Salt Lake City, Utah 84119 USA</p>
 
-                       </div>
-            	   </div>
-            	</div>
+
+</div>
+				</div>
 			</div>
 			<div id="ft">
-                <img src="/images/3.0/shared/cw_product.gif" alt="A ContentWatch Product">
-                <br style="clear:both;">
-                <a href="/sitemap">Site&nbsp;Map</a>
-                <a href="/support/return_policy">Return&nbsp;Policy</a>
-                <a href="/support/privacy_policy">Privacy&nbsp;Policy</a>
-                <a href="/company/resellers">Find&nbsp;a&nbsp;Reseller</a>
-                <a href="/partners/affiliate">Affiliates</a>
-                <a href="/rss" class="rss">RSS&nbsp;News&nbsp;Feed</a>
-                <p>© 2001-2008 ContentWatch, Inc., All rights reserved.</p>
-        		<!----COPYRIGHTS---->
+                            <ul class="menu">
+                                <li><a href="/company">About Us</a></li>
+                                <li><a href="/company/contact_us">Contact Us</a></li>
+                                <li><a href="/sitemap">Site&nbsp;Map</a></li>
+                                <li><a href="/support/return_policy">Return&nbsp;Policy</a></li>
+                                <li><a href="/support/privacy_policy">Privacy&nbsp;Policy</a></li>
+                                <li><a href="/company/resellers">Find&nbsp;a&nbsp;Reseller</a></li>
+                                <li><a href="/partners/affiliate">Affiliates</a></li>
+                                <li><a href="/company/press_releases">Press Room</a></li>
+                                <li><a href="/rss" class="rss">RSS&nbsp;News&nbsp;Feed</a></li>
+                            </ul>
+                            <div class="yui-g">
+                                <div class="yui-u first">
+                                    <p>© 2001-2009 ContentWatch, Inc., All rights reserved.</p>
+                                    <!----COPYRIGHTS---->
+
+                                </div>
+                                <div class="yui-u trustlogos"><a href="/help/what_is_ssl" class="popup"><img src="/images/v/shared/trust/cp_secure.png" alt="100 Percent Secure"><img src="/images/v/shared/trust/digicert.png" alt="SSL Security"></a><a href="http://www.bbbonline.org/cks.asp?id=1060208144810"><img src="/images/v/shared/trust/bbb.gif" alt="Better Business Bureau Online Reliability"></a></div>
+                            </div>
 			</div>
+
 		</div>
 		
-<script type="text/javascript" src="//static4.contentwatch.com/javascript/base3.16.js"></script>
+<script type="text/javascript" src="//static4.contentwatch.com/javascript/base3.20.js"></script>
 <script type="text/javascript" src="/javascript/mint.php"></script>
 <script type="text/javascript" src="/mint/index.php?js"></script>
 <script type="text/javascript" src="http://www.google-analytics.com/ga.js"></script>
