--- a/d/di/din/dinehere.ca.html
+++ b/d/di/din/dinehere.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dinehere.ca privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618194534id_/http%3A//www.dinehere.ca/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dinehere.ca privacy policy that was archived on 2009-10-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091024211552id_/http%3A//dinehere.ca/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -154,7 +154,7 @@
 	</tr>
 	<tr>
 		<td align="center" style="padding-top:10px;">
-		<span class="footer">Server Time: 6/18/2009 12:45:33 PM - Last Statistics Update: 6/18/2009 3:39:53 AM
+		<span class="footer">Server Time: 10/24/2009 2:15:35 PM - Last Statistics Update: 10/24/2009 3:50:43 AM
 </span>
 		</td>
 	</tr>
