--- a/f/fr/fre/free-php-webhosting.com.html
+++ b/f/fr/fre/free-php-webhosting.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the free-php-webhosting.com privacy policy that was archived on 2009-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090622025856id_/http%3A//free-php-webhosting.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the free-php-webhosting.com privacy policy that was archived on 2009-10-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091025060235id_/http%3A//free-php-webhosting.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Privacy Policy</title>
@@ -244,10 +244,10 @@ d.write('<img width="1" height="1" border="0" alt="Tyxo.bg counter"');
 d.write(' src="http://cnt.tyxo.bg/50800?rnd='+Math.round(Math.random()*2147483647));
 d.write('&sp='+screen.width+'x'+screen.height+'&r='+escape(d.referrer)+'" />');
 //-->
-</script><img width="1" height="1" border="0" alt="Tyxo.bg counter" src="http://cnt.tyxo.bg/50800?rnd=1907486164&amp;sp=800x600&amp;r=">
+</script><img width="1" height="1" border="0" alt="Tyxo.bg counter" src="http://cnt.tyxo.bg/50800?rnd=262192234&amp;sp=800x600&amp;r=">
 <noscript><div><img src="http://cnt.tyxo.bg/50800" width="1" height="1" alt="" /></div></noscript>
 <!-- KRAI NA TYXO.BG BROYACH -->
-<center>Advertisement: <a href="http://naturalfludefence.com/" title="Flu Defence">Flu Defence</a>, <a href="http://whitelighttv.com/" title="WhiteLight Teeth Whitening System">WhiteLight Teeth Whitening</a>, <a href="http://epartypills.com/" title="Party Pills">Party Pills</a>.</center>
+<center>Advertisement: <a href="http://noflam.us/" title="NoFlam">NoFlam Anti-Arthritis Herbal Supplement</a>, <a href="http://prostofine.us/" title="ProstoFine">ProstoFine - Herbal Pills for Prostate Health</a>, <a href="http://whitelighttv.com/" title="WhiteLight Teeth Whitening System">WhiteLight Teeth Whitening</a>, <a href="http://epartypills.com/" title="Party Pills">Party Pills</a>, <a href="http://procalisx.cc/" title="ProCalisX">ProCalisX</a></center>
 </div>
 
 
