--- a/e/es/ess/essortment.com.html
+++ b/e/es/ess/essortment.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the essortment.com privacy policy that was archived on 2009-05-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090503143520id_/http%3A//www.essortment.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the essortment.com privacy policy that was archived on 2009-10-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091025120134id_/http%3A//www.essortment.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -302,6 +302,39 @@ _uacct = "UA-2130855-11";
  _udn="essortment.com"; 
 urchinTracker();
 </script>
+<!-- Begin comScore Tag --> 
+<script> 
+                document.write(unescape("%3Cscript src='" + (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js' %3E%3C/script%3E")); 
+</script><script src="https://sb.scorecardresearch.com/beacon.js"></script>
+ <script>
+                 COMSCORE.beacon({ 
+                                c1:2, 
+                                c2:6036385, 
+                                c3:"", 
+                                c4:"", 
+                                c5:"", 
+                                c6:"", 
+                                c15:"" 
+                }); 
+</script> 
+<noscript> 
+                <img src="http://b.scorecardresearch.com/b?c1=2&c2=6036385&c3=&c4=&c5=&c6=&c15=&cv=1.3&cj=1" style="display:none" width="0" height="0" alt="" />
+ </noscript>
+ <!-- End comScore Tag --> 
+
+
+<!-- Start Quantcast tag w/ Media Title and Channel and Subchannel -->
+ <script type="text/javascript"> _qoptions={ qacct:"p-4dIM5nVs2rFio", labels:"Demand Media Network" }; </script> 
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script> 
+<noscript> <img src="http://pixel.quantserve.com/pixel/p-4dIM5nVs2rFio.gif?labels=Demand Media Network" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/> </noscript>
+ <!-- End Quantcast tag --> 
+
+
+
+
+
+
+
 <!-- Casale Media 2008 (C) -->
 
 <!-- Ad Format: Pop Under -->
@@ -320,7 +353,7 @@ document.write('<scr'+'ipt'+casaleHost+'94844&amp;u=');
 
 document.write(casaleU+'&amp;f=1&amp;id='+casaleR+'"><\/scr'+'ipt>');
 
-//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=94844&amp;u=essortment.com&amp;f=1&amp;id=1736552362.712887"></script>
+//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=94844&amp;u=essortment.com&amp;f=1&amp;id=1736552060.8419263"></script>
 
 <!-- Casale Media 2008 (C) -->
 
