--- a/w/wa/wat/watch-football-online.co.uk.html
+++ b/w/wa/wat/watch-football-online.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the watch-football-online.co.uk privacy policy that was archived on 2009-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616230742id_/http%3A//www.watch-football-online.co.uk/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the watch-football-online.co.uk privacy policy that was archived on 2009-10-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091025140755id_/http%3A//watch-football-online.co.uk/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="EN"><head>
 <title>online-soccer.tv - Watch Live Soccer directly on your PC</title>
