tennis.com (archived on 2009-10-26)
{
  "alexa_rank": 9628,
  "analysis_subcorpus": true,
  "categories": "sports",
  "char_count": 10182,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.51,
  "homepage_snapshot_redirected_domain": "tennis.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091001131929id_/http://www.tennis.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091001131929id_/http%3A//tennis.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "tennis.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091026174243id_/http%3A//www.tennis.com/info/privacypolicy/index.aspx",
  "policy_title": "TENNIS.com - Privacy Policy",
  "policy_url": "tennis.com/info/privacypolicy/index.aspx",
  "sha1": "24c6ff518330b6dc0fd085f8b6d21860eaf12819",
  "simhash": 13177875746379757001,
  "simhash_updated": false,
  "site_hostname": "tennis.com",
  "site_url": "http://tennis.com",
  "smog": 16.11,
  "strict_updated": false,
  "timestamp": "20091026174243",
  "word_count": 1633,
  "year": 2009
}

--- a/t/te/ten/tennis.com.html
+++ b/t/te/ten/tennis.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tennis.com privacy policy that was archived on 2009-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090627111044id_/http%3A//www.tennis.com/info/privacypolicy/index.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tennis.com privacy policy that was archived on 2009-10-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091026174243id_/http%3A//www.tennis.com/info/privacypolicy/index.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -156,7 +156,7 @@ top.location.href="http://www.tennis.com/search/search.aspx?tag="+Tag;
 var a = Math.floor(Math.random()*9999999999+1)
 var random_number = a;
 document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;dcopt=ist;sz=728x90;tile=1;ord=' + random_number + '></scr' + 'ipt>');
-</script><script src="http://ad.doubleclick.net/adj/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;dcopt=ist;sz=728x90;tile=1;ord=95147962"></script>
+</script><script src="http://ad.doubleclick.net/adj/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;dcopt=ist;sz=728x90;tile=1;ord=7316796224"></script>
 
 <noscript>
 <A HREF="http://ad.doubleclick.net/jump/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;sz=728x90;tile=1;ord='+random_number+'" >
@@ -187,7 +187,7 @@ myimages[2]="/images/main/title_facebook.gif"
 
 //specify corresponding links below
 var imagelinks=new Array()
-imagelinks[1]="http://twitter.com/tennis"
+imagelinks[1]="http://www.tennis.com/info/twitter/index.aspx"
 imagelinks[2]="http://www.facebook.com/pages/TENNIScom/25963305308"
 
 var ry=Math.floor(Math.random()*myimages.length)
@@ -197,7 +197,7 @@ document.write('<a href='+'"'+imagelinks[ry]+'"'+' target=_blank><img src="'+myi
 }
 random_imglink()
 //-->
-</script><a href="http://twitter.com/tennis" target="_blank"><img src="/images/main/title_twitter.gif" border="0"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</script><a href="http://www.tennis.com/info/twitter/index.aspx" target="_blank"><img src="/images/main/title_twitter.gif" border="0"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="http://www.espn.com" target="_blank"><img src="/images/main/espn_logo.gif" border="0"></a>
 </td>
 </tr>
@@ -385,7 +385,7 @@ General Phone Number: (310) 893-5300</span>&nbsp;</p>
 <td width="300" height="250">
 <script>
 document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;sz=300x250;tile=3;ord=' + random_number + '></scr' + 'ipt>');
-</script><script src="http://ad.doubleclick.net/adj/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;sz=300x250;tile=3;ord=95147962"></script>
+</script><script src="http://ad.doubleclick.net/adj/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;sz=300x250;tile=3;ord=7316796224"></script>
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;sz=300x250;tile=3;ord='+random_number+'" >
@@ -415,8 +415,8 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/tennis.blackrock/
 <td><table cellspacing="0" cellpadding="0">
 <tbody>
 <tr>
-<td class="custom_header" bgcolor="#8d9395" height="17" width="150">TENNIS Magazine</td>
-<td class="custom_header" bgcolor="#8d9395" height="17" width="150" align="right">July&nbsp;2009&nbsp;&nbsp;</td>
+<td class="custom_header" width="150" bgcolor="#8d9395" height="17">TENNIS Magazine</td>
+<td class="custom_header" align="right" width="150" bgcolor="#8d9395" height="17">October 2009&nbsp;&nbsp;</td>
 </tr>
 </tbody>
 </table>
@@ -427,10 +427,9 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/tennis.blackrock/
 <tbody>
 <tr>
 <td valign="top" colspan="2"></td>
-<td class="current_issue" valign="top" width="220"><p><font color="#000000"><font color="#ff0080"><font color="#ffff00">•<font color="#000000">&nbsp;</font><font color="#ffffff"><strong>Wimbledon Preview Issue</strong></font><br>
-•</font><font color="#000000">&nbsp;</font></font><font color="#ffffff">Venus Williams: Grass Queen<br></font><font color="#ffff00">•</font>&nbsp;</font><font color="#ffffff">Big Issues at the Big W<br></font><font color="#ffff00">•<font color="#000000">&nbsp;</font></font><font color="#ffffff"><a title="Excerpt from Strokes of Genius" href="/features/general/features.aspx?id=177834">Excerpt from <em>Strokes of Genius</em></a><br></font><font color="#ffff00">•</font><font color="#000000">&nbsp;</font><font color="#ffffff">Patrick McEnroe's Cup Diary</font><font color="#ffff00"><br></font><font size="1">&nbsp;</font><br><a title="More" href="/magazine/issue.aspx?id=177712"><strong><font size="1">Full issue details</font></strong></a>&nbsp;<font color="#ffffff" size="1">-<font color="#000000" size="2">&nbsp;</font></font><a title="Subscribe now" href="https://w1.buysub.com/loc/TEN/currentissue" target="_blank"><strong><font size="1">Subscribe now</font></strong></a></p>
+<td class="current_issue" valign="top" width="220"><p><font color="#000000"><font color="#ff0080"><font color="#ffff00">•<font color="#000000">&nbsp;<font color="#ffffff">Johnny Mac is 50<br></font></font>•</font><font color="#000000">&nbsp;</font></font><font color="#ffffff">Get Better With Age<br></font><font color="#ffff00">•</font>&nbsp;</font><font color="#ffffff">Ana Agonistes<br></font><font color="#ffff00">•<font color="#000000">&nbsp;</font></font><font color="#ffffff">Pastimes of the Pros<br></font><font color="#ffff00">•</font><font color="#000000">&nbsp;</font><font color="#ffffff">Freeze Frame with Federer<br></font><font size="1">&nbsp;</font><br><a title="More" href="/magazine/issue.aspx?id=186050"><strong><font size="1">Full issue details</font></strong></a>&nbsp;<font color="#ffffff" size="1">-<font color="#000000" size="2">&nbsp;</font></font><a title="Subscribe now" href="https://w1.buysub.com/loc/TEN/currentissue" target="_blank"><strong><font size="1">Subscribe now</font></strong></a></p>
 </td>
-<td valign="top" width="90"><a href="/magazine/issue.aspx?id=177712"><img title="July 2009" border="0" alt="July 2009" src="/uploadedImages/Content_Boxes/TENNIS_Magazine/2009_06_10_coversmall.jpg" width="91" height="122"></a></td>
+<td valign="top" width="90"><a href="/magazine/issue.aspx?id=186050"><img title="October 2009" height="123" alt="October 2009" src="/uploadedImages/Content_Boxes/TENNIS_Magazine/2009_09_18_cover3.jpg" width="91" border="0"></a></td>
 </tr>
 </tbody>
 </table>
@@ -575,7 +574,7 @@ target.onblur=function(){ if  (this.value==''){ this.value=this.dtxt; } }
 <td align="center">
 <script>
 document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;sz=160x600;tile=2;ord=' + random_number + '></scr' + 'ipt>');
-</script><script src="http://ad.doubleclick.net/adj/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;sz=160x600;tile=2;ord=95147962"></script>
+</script><script src="http://ad.doubleclick.net/adj/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;sz=160x600;tile=2;ord=7316796224"></script>
 
 <noscript> 
 <A HREF="http://ad.doubleclick.net/jump/tennis.blackrock/ros;category=;page=;subss=;subs=;sect=ros;site=;chan=;kw=;sz=160x600;tile=2;ord='+random_number+'" >
@@ -612,7 +611,7 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/tennis.blackrock/
 <a href="/index.aspx">Home</a> &nbsp;-&nbsp;
 <a href="/info/aboutus/index.aspx">About Us</a> &nbsp;-&nbsp; 
 <a href="/info/privacypolicy/index.aspx">Privacy Policy</a> &nbsp;-&nbsp; 
-<a href="http://www.tennismediakit.com" target="_blank">Advertise</a> &nbsp;-&nbsp; 
+<a href="http://www.tennis.com/microsites/mediakit/" target="_blank">Advertise</a> &nbsp;-&nbsp; 
 <a href="/info/contactus/index.aspx">Contact Us</a> &nbsp;-&nbsp; 
 <a href="/rss/index.aspx"><img src="/images/main/rss_small.gif" border="0" title="Tennis.com RSS" alt="Tennis.com RSS" style="margin:0;vertical-align:middle"></a>&nbsp;<a href="/rss/index.aspx">RSS</a>&nbsp;-&nbsp; 
 <a href="http://www.tennis.com/microsites/textalerts/index.html" target="_blank">SMS Text</a> &nbsp;-&nbsp; 
