--- a/r/rs/rsc/rsc.org.html
+++ b/r/rs/rsc/rsc.org.html
@@ -1,8 +1,9 @@
-<!--The following is the downloaded HTML source of the rsc.org privacy policy that was archived on 2009-01-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090106201409id_/http%3A//www.rsc.org/help/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rsc.org privacy policy that was archived on 2009-10-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091027011500id_/http%3A//www.rsc.org/help/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+<meta name="verify-v1" content="eIPdUuQrQcD+GO0uAtBe+WEiNq36HfTM8YRQlS+rTfk=">
 <title>Privacy</title>
 
 <link rel="stylesheet" href="/_stylesheets/global.css" type="text/css">
@@ -109,7 +110,7 @@
        <div id="content">     
        <div>
 <h2>Privacy</h2><br>
-<h3>How does the RSC use your Data?</h3><p>The RSC uses your personal data (e.g. name, address, email address, country of residence) to administer its activities, products, and services and to send information about them to you. The RSC may undertake communications on behalf of other organisations to selected contacts, customers, and members but only to those who have given their agreement to receiving such communications.</p><h3>The Data We Collect about Users</h3><p>The RSC logs the Internet Protocol (IP) address of your PC to be able to receive and send information on the Internet.</p><p>The RSC collects personal data when your register or update your personal details using online forms.</p><h3>Inaccuracies and corrections</h3><p>You can correct or update your personal data using the appropriate online form, by contacting the RSC using the email address on an online form, or if you are not sure whom to contact by emailing webmaster.</p><h3>Security</h3><p></p><div class="imgdivright"><img alt="Padlock image used to indicate Secure Site License-approved technology " name="Padlock" height="89" width="70" tcmuri="tcm:15-26561" src="/images/lock_tcm18-26561.gif"></div>The RSC takes care to protect the data it collects about site users, using Secure Site License-approved technology where appropriate. Pages that use this technology are flagged with&nbsp;a padlock&nbsp;symbol as shown.&nbsp;&nbsp;<p></p><h3>Cookies</h3><p>A cookie is a text-only string of information that a website transfers to the cookie file of the browser on your computer's hard disk so that the website can remember who you are. A cookie will typically contain the name of the domain from which the cookie has come, the "lifetime" of the cookie, and a value, usually a randomly generated unique number.</p><p>Cookies can help a website to arrange content to match your preferred interests more quickly. Most major websites use cookies. Cookies cannot be used by themselves to identify you.&nbsp;</p><p>The RSC uses several types of cookie on its websites:&nbsp;<strong><em>Session Cookies</em></strong> are temporary cookies that remain in the cookie file of your browser until you leave the site,&nbsp;</p><ul><li>To allow you to carry information across pages of our site and avoid having to re-enter information;</li><li>To allow you to maintain a shopping basket;</li><li>Within registration to allow you to access stored information.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Persistent cookies</em></strong> remain in the cookie file of your browser for much longer (though how long will depend on the lifetime of the specific cookie).&nbsp;</p><ul><li>To help us recognise you as a unique visitor (just a number) when you return to our website and to allow us to tailor content or advertisements to match your preferred interests or to avoid showing you the same adverts repeatedly;</li><li>To compile anonymous, aggregated statistics that allow us to understand how users use our site and to help us improve the structure of our website. We cannot identify you personally in this way;</li><li>Within research surveys to ensure you are not invited to complete a questionnaire too often or after you have already done so.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Third-party cookies</em></strong> are used to control page content for a specific user:&nbsp;</p><ul><li>To serve advertisements on our sites and track whether these advertisements are clicked on by users;</li><li>To control how often you are shown a particular advertisement;</li><li>To tailor content to your preferences;</li><li>To count the number of anonymous users of our sites;</li><li>To provide security within shopping baskets, e.g. to pay for a membership subscription or a journal pay-per-view.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Disabling/Enabling Cookies</em></strong>. You have the ability to accept or decline cookies by modifying the settings in your browser. However, you may not be able to use all the interactive features of our site if cookies are disabled.&nbsp;</p><p>To find out how to disable/enable cookies, please consult the Help features of your browser.</p><h3>Email communications</h3><p>Email communications are sent using secure technology that does not disclose your email address to any other recipient.&nbsp;</p><h3>Disclose of Personal Data</h3><p>The RSC does not give or sell personal data about any of its contacts, collaborators, customers, or members to any individual or organisation unless they are involved in providing the RSC activities, products, or services. Such contractors are subject to a non-disclosure agreement and have to maintain the same security as does the RSC itself.</p><h3>Direct marketing</h3><p>You can opt out of receiving information about any of these by changing your details using the appropriate online form or, if you are unsure, by contacting&nbsp;webmaster.</p><h3>Links</h3><p>This privacy policy does not cover the links within this site linking to other sites.</p><h3>Changes to this policy</h3><p>This policy is updated from time to time without notice. You may wish to bookmark this page for changes.</p>
+<h3>How does the RSC use your Data?</h3><p>The RSC uses your personal data (e.g. name, address, email address, country of residence) to administer its activities, products, and services and to send information about them to you. The RSC may undertake communications on behalf of other organisations to selected contacts, customers, and members but only to those who have given their agreement to receiving such communications.</p><h3>The Data We Collect about Users</h3><p>The RSC logs the Internet Protocol (IP) address of your PC to be able to receive and send information on the Internet.</p><p>The RSC collects personal data when your register or update your personal details using online forms.</p><h3>Inaccuracies and corrections</h3><p>You can correct or update your personal data using the appropriate online form, by contacting the RSC using the email address on an online form, or if you are not sure whom to contact by emailing webmaster.</p><h3>Security</h3><p></p><div class="imgdivright"><img alt="Padlock image used to indicate Secure Site License-approved technology " name="Padlock" height="89" width="70" tcmuri="tcm:15-26561" src="/images/lock_tcm18-26561.gif"></div>The RSC takes care to protect the data it collects about site users, using Secure Site License-approved technology where appropriate. Pages that use this technology are flagged with&nbsp;a padlock&nbsp;symbol as shown.&nbsp;&nbsp;<p></p><h3>Cookies</h3><p>A cookie is a text-only string of information that a website transfers to the cookie file of the browser on your computer's hard disk so that the website can remember who you are. A cookie will typically contain the name of the domain from which the cookie has come, the "lifetime" of the cookie, and a value, usually a randomly generated unique number.</p><p>Cookies can help a website to arrange content to match your preferred interests more quickly. Most major websites use cookies. Cookies cannot be used by themselves to identify you.&nbsp;</p><p>The RSC uses several types of cookie on its websites:&nbsp;<strong><em>Session Cookies</em></strong> are temporary cookies that remain in the cookie file of your browser until you leave the site,&nbsp;</p><ul><li>To allow you to carry information across pages of our site and avoid having to re-enter information;</li><li>To allow you to maintain a shopping basket;</li><li>Within registration to allow you to access stored information.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Persistent cookies</em></strong> remain in the cookie file of your browser for much longer (though how long will depend on the lifetime of the specific cookie).&nbsp;</p><ul><li>To help us recognise you as a unique visitor (just a number) when you return to our website and to allow us to tailor content or advertisements to match your preferred interests or to avoid showing you the same adverts repeatedly;</li><li>To compile anonymous, aggregated statistics that allow us to understand how users use our site and to help us improve the structure of our website. We cannot identify you personally in this way;</li><li>Within research surveys to ensure you are not invited to complete a questionnaire too often or after you have already done so.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Third-party cookies</em></strong> are used to control page content for a specific user:&nbsp;</p><ul><li>To serve advertisements on our sites and track whether these advertisements are clicked on by users;</li><li>To control how often you are shown a particular advertisement;</li><li>To tailor content to your preferences;</li><li>To count the number of anonymous users of our sites;</li><li>To provide security within shopping baskets, e.g. to pay for a membership subscription or a journal pay-per-view.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Disabling/Enabling Cookies</em></strong>. You have the ability to accept or decline cookies by modifying the settings in your browser. However, you may not be able to use all the interactive features of our site if cookies are disabled.&nbsp;</p><p>To find out how to disable/enable cookies, please consult the Help features of your browser.</p><h3>Email communications</h3><p>Email communications are sent using secure technology that does not disclose your email address to any other recipient.&nbsp;</p><h3>Disclosure of Personal Data</h3><p>The RSC does not give or sell personal data about any of its contacts, collaborators, customers, or members to any individual or organisation unless they are involved in providing the RSC activities, products, or services. Such contractors are subject to a non-disclosure agreement and have to maintain the same security as does the RSC itself.</p><h3>Direct marketing</h3><p>You can opt out of receiving information about any of these by changing your details using the appropriate online form or, if you are unsure, by contacting&nbsp;webmaster.</p><h3>Links</h3><p>This privacy policy does not cover the links within this site linking to other sites.</p><h3>Changes to this policy</h3><p>This policy is updated from time to time without notice. You may wish to bookmark this page for changes.</p>
 </div>
 
 <br>
@@ -146,12 +147,12 @@ var DocTitle;
 DocTitle = document.title;
 DocTitle = DocTitle.replace('&',' ');
 document.write("<img src=\"/images/designimages/icon_email.gif\" alt=\"Email Icon\" border=\"0\">&nbsp;");
-document.write("<a href=\"#\" onClick=\"javascript: popwindow('/Email_Friend.asp?Title=' + DocTitle + '&URL=http://www.rsc.org./Help/privacy.asp');\">Email this to a friend</a>");
+document.write("<a href=\"#\" onClick=\"javascript: popwindow('/Email_Friend.asp?Title=' + DocTitle + '&URL=http://www.rsc.org/help/privacy.asp');\">Email this to a friend</a>");
 //-->
-</script><img src="/images/designimages/icon_email.gif" alt="Email Icon" border="0">&nbsp;<a href="#" onclick="javascript: popwindow('/Email_Friend.asp?Title=' + DocTitle + '&amp;URL=http://www.rsc.org./Help/privacy.asp');">Email this to a friend</a>
+</script><img src="/images/designimages/icon_email.gif" alt="Email Icon" border="0">&nbsp;<a href="#" onclick="javascript: popwindow('/Email_Friend.asp?Title=' + DocTitle + '&amp;URL=http://www.rsc.org/help/privacy.asp');">Email this to a friend</a>
  
 <noscript>
-<img src="/images/designimages/icon_email.gif" alt="Email Icon" border="0">&nbsp;<a target="_blank" href="/Email_Friend.asp?Title=Royal%20Society%20of%20Chemistry%20Website&URL=http://www.rsc.org./Help/privacy.asp');">Email this to a friend</a>
+<img src="/images/designimages/icon_email.gif" alt="Email Icon" border="0">&nbsp;<a target="_blank" href="/Email_Friend.asp?Title=Royal%20Society%20of%20Chemistry%20Website&URL=http://www.rsc.org/help/privacy.asp');">Email this to a friend</a>
 </noscript>
 
 
@@ -172,6 +173,100 @@ document.write("<a href=\"#\" onClick=\"javascript: popwindow('/Email_Friend.asp
     
 <div class="extrablock">
 </div><!-- end .extrablock -->
+
+<div class="ads">
+
+<!-- OAS SETUP begin -->
+<script language="JavaScript">
+<!--
+//configuration
+OAS_url = 'http://oas.rsc.org/RealMedia/ads/';
+OAS_sitepage = 'www.rsc.org/help/privacy.asp';
+OAS_listpos = 'Right1,Right2,Right3,x01,x02,x03,x04,x05,x06';
+OAS_query = '';
+//end of configuration
+OAS_version = 10;
+OAS_rn = '001234567890'; OAS_rns = '1234567890';
+OAS_rn = new String (Math.random()); OAS_rns = OAS_rn.substring (2, 11);
+
+function OAS_NORMAL(pos) {
+	document.write('<a href="' + OAS_url + 'click_nx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '!' + pos + '?' + OAS_query + '" target=' + OAS_target + '>');
+	document.write('<img src="' + OAS_url + 'adstream_nx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '!' + pos + '?' + OAS_query + '" border=0></A>');
+}
+//-->
+</script>
+<script language="JavaScript1.1">
+<!--
+OAS_version = 11;
+if ((navigator.userAgent.indexOf('Mozilla/3') != -1) || (navigator.userAgent.indexOf('Mozilla/4.0 WebTV') != -1))
+	OAS_version = 10;
+if (OAS_version >= 11)
+	document.write('<scr' + 'ipt language=JavaScript1.1 src="' + OAS_url + 'adstream_mjx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' +
+<!-- This line is for the browser Opera 4.01 -->
+OAS_listpos + '?' + OAS_query + '"><\/script>');//-->
+</script><script language="JavaScript1.1" src="http://oas.rsc.org/RealMedia/ads/adstream_mjx.ads/www.rsc.org/help/privacy.asp/1428876588@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06?"></script>
+<script language="JavaScript">
+<!--
+document.write('');
+<!-- Function OAS_AD to display the banner -->
+function OAS_AD(pos) {
+	document.write('<br />');
+	document.write('<p>');
+	if (OAS_version >= 11)
+		OAS_RICH(pos);
+	else
+		OAS_NORMAL(pos);
+	document.write('</p>');
+}
+//-->
+</script>
+<!-- OAS SETUP end -->
+
+<!--  This section: Display the banner for a position -->
+<script language="JavaScript">
+<!--
+	OAS_AD('Right1');
+	OAS_AD('Right2');
+	OAS_AD('Right3');
+
+	document.write('<br />');
+	document.write('<h3>Advertisements</h3>');
+	OAS_AD('x01');
+	OAS_AD('x02');
+	OAS_AD('x03');
+	OAS_AD('x04');
+	OAS_AD('x05');
+	OAS_AD('x06');
+
+//-->
+</script><br><p>
+
+<noscript>
+
+<br />
+<p><a href="http://oas.rsc.org/RealMedia/ads/click_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!Right1"><img src="http://oas.rsc.org/RealMedia/ads/adstream_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!Right1" border="0" alt="RSC Advert"></a></p>
+<br />
+<p><a href="http://oas.rsc.org/RealMedia/ads/click_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!Right2"><img src="http://oas.rsc.org/RealMedia/ads/adstream_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!Right2" border="0" alt="RSC Advert"></a></p>
+<br />
+<p><a href="http://oas.rsc.org/RealMedia/ads/click_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!Right3"><img src="http://oas.rsc.org/RealMedia/ads/adstream_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!Right3" border="0" alt="RSC Advert"></a></p>
+<br />
+<h3>Advertisements</h3>
+<br />
+<p><a href="http://oas.rsc.org/RealMedia/ads/click_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x01" target="_blank"><img src="http://oas.rsc.org/RealMedia/ads/adstream_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x01" border="0" alt="Advert"></a></p>
+<br />
+<p><a href="http://oas.rsc.org/RealMedia/ads/click_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x02" target="_blank"><img src="http://oas.rsc.org/RealMedia/ads/adstream_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x02" border="0" alt="Advert"></a></p>
+<br />
+<p><a href="http://oas.rsc.org/RealMedia/ads/click_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x03" target="_blank"><img src="http://oas.rsc.org/RealMedia/ads/adstream_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x03" border="0" alt="Advert"></a></p>
+<br />
+<p><a href="http://oas.rsc.org/RealMedia/ads/click_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x04" target="_blank"><img src="http://oas.rsc.org/RealMedia/ads/adstream_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x04" border="0" alt="Advert"></a></p>
+<br />
+<p><a href="http://oas.rsc.org/RealMedia/ads/click_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x05" target="_blank"><img src="http://oas.rsc.org/RealMedia/ads/adstream_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x05" border="0" alt="Advert"></a></p>
+<br />
+<p><a href="http://oas.rsc.org/RealMedia/ads/click_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x06" target="_blank"><img src="http://oas.rsc.org/RealMedia/ads/adstream_nx.ads/www.rsc.org/help/privacy.asp/60777307@Right1,Right2,Right3,x01,x02,x03,x04,x05,x06!x06" border="0" alt="Advert"></a></p>
+
+</noscript>
+
+</p></div><!-- end ads -->
  
 <br class="cl">
 </div> <!-- end #extralinks -->
@@ -201,10 +296,9 @@ document.write("<a href=\"#\" onClick=\"javascript: popwindow('/Email_Friend.asp
 
  
 <script type="text/javascript">
-try {
 _uacct = "UA-6708829-1";
 urchinTracker();
-} catch(err) {}</script>
+</script>
  
 
 
