yosmile.com (archived on 2009-10-27)
{
  "alexa_rank": 93247,
  "analysis_subcorpus": true,
  "categories": "",
  "char_count": 4027,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.06,
  "homepage_snapshot_redirected_domain": "yosmile.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091028164349id_/http://www.yosmile.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091028164349id_/http%3A//yosmile.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "yosmile.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091027215544id_/http%3A//www.yosmile.com/index.php%3Fpage%3Dprivacy",
  "policy_title": "YO Smile !::Privacy",
  "policy_url": "yosmile.com/index.php?page=privacy",
  "sha1": "4dc2423b3c1af4548fa058150d7b7178b5d2647c",
  "simhash": 4849379372792227962,
  "simhash_updated": false,
  "site_hostname": "yosmile.com",
  "site_url": "http://yosmile.com",
  "smog": 11.73,
  "strict_updated": false,
  "timestamp": "20091027215544",
  "word_count": 653,
  "year": 2009
}

--- a/y/yo/yos/yosmile.com.html
+++ b/y/yo/yos/yosmile.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yosmile.com privacy policy that was archived on 2009-01-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090130114648id_/http%3A//www.yosmile.com/index.php%3Fpage%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yosmile.com privacy policy that was archived on 2009-10-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091027215544id_/http%3A//www.yosmile.com/index.php%3Fpage%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta http-equiv="Pragma" content="no-cache">
@@ -166,13 +166,7 @@ document.write('<link rel="stylesheet" type="text/css" href="http://css.yosmile.
 if (screen.width == 800) {
 document.write('<link rel="stylesheet" type="text/css" href="http://css.yosmile.com/welcome1.css">');
 }
-if (screen.width == 1024) {
-document.write('<link rel="stylesheet" type="text/css" href="http://css.yosmile.com/welcome.css">');
-}
-if (screen.width == 1280) {
-document.write('<link rel="stylesheet" type="text/css" href="http://css.yosmile.com/welcome.css">');
-}
-if (screen.width == 1600) {
+if (screen.width >= 801) {
 document.write('<link rel="stylesheet" type="text/css" href="http://css.yosmile.com/welcome.css">');
 }
 </script><link rel="stylesheet" type="text/css" href="http://css.yosmile.com/welcome1.css">
@@ -243,20 +237,6 @@ document.write('<link rel="stylesheet" type="text/css" href="http://css.yosmile.
 	<hr>
 <div id="topwrapper">
 		
-	
-	<div class="banner-header"><center>
-<script type="text/javascript"><!--
-google_ad_client = "pub-0817675267322877";
-/* Yosmile 728x90, created 12/22/08 */
-google_ad_slot = "6904460153";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></center></div>
-
-
 	<div class="padded">
 
 <div class="padded">
@@ -283,19 +263,6 @@ google_ad_height = 90;
 
 </div><div style="clear:both;height:5px;"><img src="themes/handshakes_plain/gfx/spacer.gif" alt="" border="0" width="1" height="1"></div>
 
-	<div class="banner-footer"><center>
-<script type="text/javascript"><!--
-google_ad_client = "pub-0817675267322877";
-/* Yosmile 728x90, created 12/22/08 */
-google_ad_slot = "6904460153";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></center></div>
-</div>
-
 </div>
 </div>
  
@@ -307,4 +274,4 @@ urchinTracker();
 </script>
 
 
-</body></html>
+</div></body></html>
