--- a/f/fa/fat/fatcatrewards.com.html
+++ b/f/fa/fat/fatcatrewards.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fatcatrewards.com privacy policy that was archived on 2009-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090627035721id_/http%3A//www.fatcatrewards.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fatcatrewards.com privacy policy that was archived on 2009-10-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091029043449id_/http%3A//www.fatcatrewards.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -217,7 +217,7 @@ site, please contact us at: <a href="mailto:privacy@fatcatrewards.com">privacy@f
 <a href="/terms.php">Terms</a> |
 <a href="/contact.php">Contact</a>
 </p>
-<p class="copyright">Copyright 2008 FatCatRewards.com - All rights reserved</p>
+<p class="copyright">Copyright 2008-2009 FatCatRewards.com - All rights reserved</p>
 </div>
 </div>
 </div><!-- END FOOTER - 100% WIDTH -->
