telligent.com (archived on 2009-10-29)
{
  "alexa_rank": 25492,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4809,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.93,
  "homepage_snapshot_redirected_domain": "telligent.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090924072947id_/http://telligent.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090924072947id_/http%3A//telligent.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "telligent.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091029050607id_/http%3A//telligent.com/privacy-statement",
  "policy_title": "Privacy Statement : Enterprise Collaboration Software by Telligent-Online Community, Enterprise Collaboration, Social Analytics",
  "policy_url": "telligent.com/privacy-statement",
  "sha1": "4d92763ff1b0a645f6261420a3491bf74352f698",
  "simhash": 13291169216641898373,
  "simhash_updated": true,
  "site_hostname": "telligent.com",
  "site_url": "http://telligent.com",
  "smog": 15.9,
  "strict_updated": true,
  "timestamp": "20091029050607",
  "word_count": 798,
  "year": 2009
}

--- a/t/te/tel/telligent.com.html
+++ b/t/te/tel/telligent.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the telligent.com privacy policy that was archived on 2009-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090629165455id_/http%3A//telligent.com/privacy-statement) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the telligent.com privacy policy that was archived on 2009-10-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091029050607id_/http%3A//telligent.com/privacy-statement) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="stylesheet" href="/files/themes/telligentcom2009/screen.css" type="text/css" media="screen">
+		
+	
+	<link rel="stylesheet" href="/files/themes/telligentcom2009/screen.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="/files/themes/telligentcom2009/print.css" type="text/css" media="print">
-	<link rel="stylesheet" href="/files/themes/telligentcom2009/aaascreen.css" type="text/css" media="screen">
-	<link rel="stylesheet" href="/files/themes/telligentcom2009/aaascreen-redesign.css" type="text/css" media="screen">
 	<!--[if lte IE 5]>
 		<link rel="stylesheet" href="/files/themes/telligentcom2009/screen-ie6.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="/files/themes/telligentcom2009/print-ie6.css" type="text/css" media="print" />
@@ -40,7 +40,7 @@
 		Cufon.replace('h1', { fontFamily: 'FF DIN Bold' });
 		Cufon.replace('h2', { fontFamily: 'FF DIN Medium' });
 		Cufon.replace('h3', { fontFamily: 'FF DIN Medium' });
-		Cufon.replace('h4', { fontFamily: 'FF DIN Medium' });
+		Cufon.replace('h4', { fontFamily: 'FF DIN Bold' });
 		Cufon.replace('#pull-people-in-banner h1', { fontFamily: 'FF DIN Bold' });
 		Cufon.replace('#pull-people-in-banner h4', { fontFamily: 'FF DIN Medium' }); 
 		Cufon.replace('.ui-tabs-nav a', { fontFamily: 'FF DIN Bold' }); 
@@ -117,6 +117,8 @@
 	<!-- END HEAD -->
 </head>
 <body>
+
+	
 
 <div id="HeaderWrapper" class="wrapper">
 	<div id="divCustomLogin" style="display:none;">
@@ -229,19 +231,18 @@
 	<div id="header">	
 		<div id="cs-title">
 			<div id="telligent-logo">
-				<a href="/" alt="Telligent.com: Home The Discussion"><img src="/files/themes/telligentcom2009/img/TelligentLogo.png" alt="Telligent.com" border="0" width="221" height="38"></a>
+				<a href="/" alt="Telligent.com: Home The Discussion"><img src="/files/themes/telligentcom2009/img/TelligentLogo.png" alt="Telligent.com" border="0"></a>
 			</div>
 			<div id="header-top-links">
 				<ul>
 										<li><a href="/about/contact/">Contact</a></li>
-											<li style="color:#000;font-weight:bold;font-size:11px;">|</li>
-						<!--<li><a href="#TB_inline?height=300&width=400&inlineId=divCustomLogin&modal=true" class="thickbox">Login</a></li>-->
-						<li><a href="http://telligent.com/communities/login.aspx?ReturnUrl=%2f">Login</a></li>
+											<!--<li><a href="#TB_inline?height=300&width=400&inlineId=divCustomLogin&modal=true" class="thickbox">Login</a></li>-->
+						<li style="border:none;"><a href="http://telligent.com/communities/login.aspx?ReturnUrl=%2f">Login</a></li>
 						
 									</ul>
 			</div>
             <div id="search_area">
-				<form method="get" id="search_form" name="search_form" action="/search/">
+				<form method="get" id="search_form" name="search_form" action="http://telligent.com/communities/search/SearchResults.aspx">
 				<input type="text" class="search_input" value="find something" name="q" id="q" onfocus="if (this.value == 'find something') {this.value = '';}" onblur="if (this.value == '') {this.value = 'find something';}">
 				<input type="submit" id="searchsubmit" value=" ">
 				</form>
@@ -252,7 +253,7 @@
 
 <div id="BodyOuterWrapper">
 	<div id="nav">
-			<ul class="nav hover dropdown"><li class="has-children"><a href="/products/"><span>PRODUCTS</span></a><ul><li><a href="/products/telligent-community/"><span>Telligent Community</span></a></li><li><a href="/products/telligent-enterprise/"><span>Telligent Enterprise</span></a></li><li><a href="/products/telligent-analytics/"><span>Telligent Analytics</span></a></li></ul></li><li><a href="/services/"><span>SERVICES</span></a></li><li><a href="/support/"><span>SUPPORT</span></a></li><li class="has-children"><a href="/resources/white-papers/"><span>RESOURCES</span></a><ul><li><a href="/resources/white-papers/"><span>Case Studies and White Papers</span></a></li><li><a href="/resources/webinars/"><span>Webinars, Podcasts, Videos</span></a></li></ul></li><li><a href="/customers/"><span>CUSTOMERS</span></a></li><li class="has-children"><a href="/about/"><span>ABOUT</span></a><ul><li><a href="/about/"><span>About Telligent</span></a></li><li><a href="/newsroom/"><span>Newsroom</span></a></li><li><a href="/about/contact/"><span>Contact Us</span></a></li><li><a href="/about/partners/"><span>Partners</span></a></li></ul></li><li class="has-children"><a href="http://telligent.com/community-overview/"><span>COMMUNITIES</span></a><ul><li><a href="http://telligent.com/communities/business/default.aspx"><span>Business Community</span></a></li><li><a href="http://telligent.com/communities/technical/default.aspx"><span>Technical Community</span></a></li><li><a href="http://telligent.com/communities/research/default.aspx"><span>Research Community</span></a></li><li><a href="http://telligent.com/communities/conference/default.aspx"><span>Conference Community</span></a></li></ul></li></ul>
+			<ul class="nav hover dropdown"><li class="has-children"><a href="/products/"><span>PRODUCTS</span></a><ul><li><a href="/products/telligent-community/"><span>Telligent Community</span></a></li><li><a href="/products/telligent-enterprise/"><span>Telligent Enterprise</span></a></li><li><a href="/products/telligent-analytics/"><span>Telligent Analytics</span></a></li></ul></li><li><a href="/services/"><span>SERVICES</span></a></li><li><a href="/support/"><span>SUPPORT</span></a></li><li class="has-children"><a href="/resources/white-papers/"><span>RESOURCES</span></a><ul><li><a href="/resources/white-papers/"><span>Case Studies and White Papers</span></a></li><li><a href="/resources/webinars/"><span>Webinars, Podcasts, Videos</span></a></li></ul></li><li><a href="/customers/"><span>CUSTOMERS</span></a></li><li class="has-children"><a href="/about/"><span>ABOUT</span></a><ul><li><a href="/about/"><span>About Telligent</span></a></li><li><a href="/newsroom/"><span>Newsroom</span></a></li><li><a href="/about/contact/"><span>Contact Us</span></a></li><li><a href="/about/partners/"><span>Partners</span></a></li><li><a href="/about/careers/"><span>Careers</span></a></li></ul></li><li class="has-children"><a href="http://telligent.com/community-overview/"><span>COMMUNITIES</span></a><ul><li><a href="http://telligent.com/communities/business/default.aspx"><span>Business Community</span></a></li><li><a href="http://telligent.com/communities/technical/default.aspx"><span>Technology Community</span></a></li><li><a href="http://telligent.com/communities/research/default.aspx"><span>Research Community</span></a></li><li><a href="http://telligent.com/communities/conference/default.aspx"><span>Conference Community</span></a></li></ul></li></ul>
 	</div>
 	<div id="BodyWrapper" class="wrapper">
 		<div id="content">
@@ -310,6 +311,8 @@ That's it in a nutshell. The short of it is—we are interested in maintaining y
 	
 	
 	
+	
+
 	
 	
 	
@@ -407,7 +410,7 @@ pageTracker._trackPageview();
 <script type="text/javascript">__sfga();</script>
 
 <script type="text/javascript" language="JavaScript" src="/elqNow/elqCfg.js"></script>
-<script type="text/javascript" language="JavaScript" src="/elqNow/elqImg.js"></script><layer hidden="true"><img src="https://secure.eloqua.com/visitor/v200/svrGP.aspx?pps=3&amp;siteid=2703&amp;ref2=elqNone&amp;tzo=0&amp;ms=402" border="0" width="1" height="1"></layer>
+<script type="text/javascript" language="JavaScript" src="/elqNow/elqImg.js"></script><layer hidden="true"><img src="https://secure.eloqua.com/visitor/v200/svrGP.aspx?pps=3&amp;siteid=2703&amp;ref2=elqNone&amp;tzo=0&amp;ms=81" border="0" width="1" height="1"></layer>
 
 	
 
