halfoffdeals.com (archived on 2009-10-30)
{
  "alexa_rank": 124507,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 2164,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.29,
  "homepage_snapshot_redirected_domain": "halfoffdeals.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090831063053id_/http://www.halfoffdeals.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090831063053id_/http%3A//halfoffdeals.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "halfoffdeals.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091030145015id_/http%3A//www.halfoffdeals.com/privacy.php",
  "policy_title": "Half Off Deals.com Privacy Policy",
  "policy_url": "halfoffdeals.com/privacy.php",
  "sha1": "f9701e3389e7f14ee4da833dd95b12b35df5082e",
  "simhash": 12726869229820415334,
  "simhash_updated": false,
  "site_hostname": "halfoffdeals.com",
  "site_url": "http://halfoffdeals.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20091030145015",
  "word_count": 355,
  "year": 2009
}

--- a/h/ha/hal/halfoffdeals.com.html
+++ b/h/ha/hal/halfoffdeals.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the halfoffdeals.com privacy policy that was archived on 2009-04-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090422040614id_/http%3A//www.halfoffdeals.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the halfoffdeals.com privacy policy that was archived on 2009-10-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091030145015id_/http%3A//www.halfoffdeals.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><!-- InstanceBegin template="/Templates/template.dwt.php" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -39,6 +39,7 @@
                 <a href="/whats-new.php"> What's New </a>
                 <a href="/spotlight/"> Spotlight </a>
 				<a href="/about.php"> About Us </a>
+				<a href="/iphone-application.php"><span style="letter-spacing:-1px;"> Half-Off iPhone Application</span> </a>
             
 		  <a href="/contact.php"> Contact Us </a></td>
 		  <td class="menu-bg">&nbsp;</td>
@@ -110,7 +111,9 @@
 	<td valign="top">
 	<form id="zip_search" name="zip_search" method="post" action="search-deals-results.php">
     <a href="http://www.jdoqocy.com/click-2010520-10383059" target="_top">
-    <img src="http://www.ftjcfx.com/sm68y7B-53PSZVZQZWPRQTXSTTZ" alt="Save on all the things you love to do!" border="0"></a>
+    <img src="http://www.ftjcfx.com/sm68y7B-53PSZVZQZWPRQTXSTTZ" alt="Save on all the things you love to do!" border="0"></a><br>
+	<a href="/iphone-application.php">
+    <img src="/images/hod-app.jpg" alt="Download the Half-Off Deals iPhone Application FREE" border="0" vspace="5"></a>
 
     <p class="right-h1">find the <span class="white-touch">DEALS</span></p>
 
@@ -206,7 +209,7 @@ google_ad_height = 600;
     <td width="780" class="footer-bg" id="footer">
 					<p><a href="/">Home</a>
 				| <a href="/search-deals.php">Search Deals</a> | <a href="/browse-deals.php">Browse
-				Deals</a> | <a href="/whats-new.php">What's New</a> | <a href="/about.php">About Us</a> | <a href="/sitemap.php">Site
+				Deals</a> | <a href="/whats-new.php">What's New</a> | <a href="/about.php">About Us</a> | <a href="/iphone-application.php">Half-Off Deals iPhone Application</a> | <a href="/sitemap.php">Site
 				Map </a> | <a href="/contact.php">Contact Us</a><br>
 				<span class="copyright"><br>
 				</span>
@@ -232,7 +235,7 @@ google_ad_height = 600;
               <div align="center"><a target="_blank" href="https://www.scanalert.com/RatingVerify?ref=www.halfoffdeals.com"><img width="94" height="54" border="0" src="//images.scanalert.com/meter/www.halfoffdeals.com/23.gif" alt="HACKER SAFE certified sites prevent over 99.9% of hacker crime." oncontextmenu="alert('Copying Prohibited by Law - HACKER SAFE is a Trademark of ScanAlert'); return false;"></a>
               </div>
           <!-- END SCANALERT CODE --></div></td>
-          <td width="92"><div align="center"><a href="http://www.bbbonline.org/cks.asp?id=10606261118" target="_blank"><img src="/images/ReliabilitySeal.gif" width="90" height="32" border="0"></a></div></td>
+          <td width="92"><div align="center"><a href="https://www.bbb.org/online/consumer/cks.aspx?id=10907248424233" target="_blank"><img src="/images/ReliabilitySeal.gif" width="90" height="32" border="0"></a></div></td>
           <td width="130"><div align="center">
               <script id="siteSeal" type="text/javascript" src="//tracedseals.starfieldtech.com/siteseal/get?scriptId=siteSeal&amp;sealId=4a1582b37ca14e2a69305132ac1eb0c26445fc6ef3c909e3d4355dd782cd8d38"></script>
             </div></td>
@@ -268,5 +271,14 @@ _uacct = "UA-1340595-1";
 urchinTracker();
 </script>
 
-<!-- InstanceEnd -->
-</body></html>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-9963482-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+
+<!-- InstanceEnd --></body></html>
